# biamp-ntp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/biamp_ntp/: __init__.py  cli.py  client.py  protocol.py  scan.py
tests/: test_client_io.py  test_protocol.py
