[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biamp-ntp"
version = "0.2.0"
description = "Dependency-free Python client + CLI for the Biamp Nexia/Audia Text Protocol (telnet control)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Matt" }]
requires-python = ">=3.8"
keywords = ["biamp", "nexia", "audia", "dsp", "telnet", "audio", "home-automation", "av"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Home Automation",
    "Intended Audience :: Developers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/biamp-ntp/biamp-ntp"
Issues = "https://github.com/biamp-ntp/biamp-ntp/issues"

[project.scripts]
biamp-ntp = "biamp_ntp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
